<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:paddingLeft="@dimen/_12sdp"
    android:paddingRight="@dimen/_12sdp">

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tittle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_12sdp"
        android:text="@string/transaction_push_tittle"
        android:textColor="@color/black"
        android:textSize="@dimen/_13ssp"
        android:textStyle="bold" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/status_tittle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_4sdp"
        android:text="@string/detail_trans_tittle"
        android:textColor="@color/notifTextColor"
        android:textSize="@dimen/_12ssp" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/content"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_4sdp"
        android:textColor="@color/notifTextColor"
        android:textSize="@dimen/_12ssp"
        tools:text="user test" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/status"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_4sdp"
        android:textColor="@color/notifTextColor"
        android:textSize="@dimen/_12ssp"
        android:text="@string/result"
        tools:text="user test" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/date"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_4sdp"
        android:gravity="end"
        android:textSize="@dimen/_12ssp"
        />

    <View
        android:layout_width="match_parent"
        android:layout_height="2px"
        android:layout_marginTop="@dimen/_12sdp"

        android:background="@color/notifTextColor" />
</LinearLayout>

