<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true">

    <com.google.android.material.appbar.AppBarLayout

        android:id="@+id/appbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/bg_header_new"
        android:fitsSystemWindows="true">

        <include layout="@layout/include_toolbar_back" />
    </com.google.android.material.appbar.AppBarLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="@dimen/margin_toolbar">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            app:layout_constraintTop_toTopOf="parent">


            <LinearLayout
                android:id="@+id/faq"
                style="@style/settingLinearLayout">

                <ImageView
                    style="@style/settingImageView"
                    android:src="@drawable/ic_faq" />

                <com.bvb.sotp.view.RegularTextView
                    style="@style/settingTextView"
                    android:text="@string/qa"
                    app:fonts="Kuro_Regular.ttf" />

            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="2px"
                android:background="@color/dividerGray" />

            <LinearLayout
                android:id="@+id/guideline"
                style="@style/settingLinearLayout">

                <ImageView
                    style="@style/settingImageView"
                    android:src="@drawable/ic_guide_line" />

                <com.bvb.sotp.view.RegularTextView
                    style="@style/settingTextView"
                    android:text="@string/manual"
                    app:fonts="Kuro_Regular.ttf" />

            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="2px"
                android:background="@color/dividerGray" />

            <LinearLayout
                android:id="@+id/policy"
                style="@style/settingLinearLayout">

                <ImageView
                    style="@style/settingImageView"
                    android:src="@drawable/ic_policy" />

                <com.bvb.sotp.view.RegularTextView
                    style="@style/settingTextView"
                    android:text="@string/term"
                    app:fonts="Kuro_Regular.ttf" />

            </LinearLayout>
        </LinearLayout>

        <include layout="@layout/include_lang_none" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.coordinatorlayout.widget.CoordinatorLayout>